[tool.poetry]
name = "qiita-zenn-trend"
version = "0.1.0"
description = ""
authors = ["yiskw713"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.1.0"
jupyter = "^1.0.0"
slackweb = "^1.0.5"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
flake8 = "^4.0.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
